@@ -1,0 +1,52 @@
+{
+    "id": "fidwell.scenery_wall.wc3",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "originalId": "0C58B603|FIDCWC3C|2A5D070E",
+    "sourceGame": ["custom"],
+    "objectType": "scenery_wall",
+    "properties": {
+        "isBanner": true,
+        "isAllowedOnSlope": true,
+        "height": 4,
+        "price": 110,
+        "hasPrimaryColour": true,
+        "sceneryGroup": "fidwell.scenery_group.scgwalls"
+    },
+    "images": [
+      { "path": "images/00.png", "x": -29, "y": -33 },
+      { "path": "images/01.png", "x": -3, "y": -32 },
+      { "path": "images/02.png", "x": -29, "y": -45 },
+      { "path": "images/03.png", "x": -3, "y": -44 },
+      { "path": "images/04.png", "x": -29, "y": -32 },
+      { "path": "images/05.png", "x": -3, "y": -31 },
+      { "path": "images/06.png", "x": -33, "y": -35 },
+      { "path": "images/07.png", "x": 1, "y": -34 },
+      { "path": "images/08.png", "x": -33, "y": -47 },
+      { "path": "images/09.png", "x": 1, "y": -46 },
+      { "path": "images/10.png", "x": -33, "y": -34 },
+      { "path": "images/11.png", "x": 1, "y": -33 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Roman Column Wall",
+            "fr-FR": "Façade de colonnes romaines",
+            "de-DE": "Römische Säulenmauer",
+            "es-ES": "Columna romana",
+            "it-IT": "Muro a colonne romane",
+            "nl-NL": "Romeinse zuilenmuur",
+            "sv-SE": "Romersk pelarmur",
+            "ko-KR": "로마식 기둥 벽",
+            "zh-CN": "罗马圆柱墙",
+            "zh-TW": "羅馬圓柱牆",
+            "pt-BR": "Muro de Colunas Romanas",
+            "cs-CZ": "Stěna římských sloupů",
+            "ja-JP": "ローマの柱の壁",
+            "pl-PL": "Ściana z rzymskich kolumn",
+            "ru-RU": "Римская стена",
+            "eo-ZZ": "Muro de Roma Kolono",
+            "ca-ES": "Fila de columnes romanes",
+            "fi-FI": "Roomalainen pylvässeinä"
+        }
+    }
+}
