@@ -12,6 +12,7 @@
 - New object: Dinosaur (rct2.scenery_large.sdn2)
 - New object: Dinosaur (rct2.scenery_large.sdn3)
 - Fixed object: Incense Cedar Tree (rct2.scenery_small.tic)
+- Fixed object: Roman Column Wall (rct2.scenery_wall.wc3)
 - Fixed object: Egyptian Statue (rct2.scenery_small.tes1)
 - Fixed object: Sandstone Skyscraper Walkway (rct2tt.scenery_small.futsky01)
 - Updated object: Roman Column (rct2.scenery_small.trc)
